chore(longhorn): Bump longhorn to v1.9.1

--- a/apps/base/cluster-longhorn/deploy/longhorn.yaml
+++ b/apps/base/cluster-longhorn/deploy/longhorn.yaml
@@ -13,7 +13,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 description: "Ensure Longhorn pods have the highest priority to prevent any unexpected eviction by the Kubernetes scheduler under node pressure"
 globalDefault: false
 preemptionPolicy: PreemptLowerPriority
@@ -28,7 +28,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 ---
 # Source: longhorn/templates/serviceaccount.yaml
 apiVersion: v1
@@ -39,7 +39,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 ---
 # Source: longhorn/templates/serviceaccount.yaml
 apiVersion: v1
@@ -50,7 +50,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 ---
 # Source: longhorn/templates/default-resource.yaml
 apiVersion: v1
@@ -61,7 +61,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 data:
   default-resource.yaml: |-
 ---
@@ -74,7 +74,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 data:
   default-setting.yaml: |-
     priority-class: longhorn-critical
@@ -89,7 +89,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 data:
   storageclass.yaml: |
     kind: StorageClass
@@ -123,7 +123,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backingimagedatasources.longhorn.io
 spec:
@@ -316,7 +316,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backingimagemanagers.longhorn.io
 spec:
@@ -516,7 +516,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backingimages.longhorn.io
 spec:
@@ -753,7 +753,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backupbackingimages.longhorn.io
 spec:
@@ -924,7 +924,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backups.longhorn.io
 spec:
@@ -1161,7 +1161,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backuptargets.longhorn.io
 spec:
@@ -1369,7 +1369,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: backupvolumes.longhorn.io
 spec:
@@ -1566,7 +1566,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: engineimages.longhorn.io
 spec:
@@ -1590,7 +1590,6 @@ spec:
     shortNames:
     - lhei
     singular: engineimage
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -1785,7 +1784,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: engines.longhorn.io
 spec:
@@ -1797,7 +1796,6 @@ spec:
     shortNames:
     - lhe
     singular: engine
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -2188,7 +2186,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: instancemanagers.longhorn.io
 spec:
@@ -2200,7 +2198,6 @@ spec:
     shortNames:
     - lhim
     singular: instancemanager
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -2539,7 +2536,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: nodes.longhorn.io
 spec:
@@ -2563,7 +2560,6 @@ spec:
     shortNames:
     - lhn
     singular: node
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -2831,7 +2827,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: orphans.longhorn.io
 spec:
@@ -2954,7 +2950,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: recurringjobs.longhorn.io
 spec:
@@ -3158,7 +3154,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: replicas.longhorn.io
 spec:
@@ -3170,7 +3166,6 @@ spec:
     shortNames:
     - lhr
     singular: replica
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -3449,7 +3444,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: settings.longhorn.io
 spec:
@@ -3461,7 +3456,6 @@ spec:
     shortNames:
     - lhs
     singular: setting
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -3569,7 +3563,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: sharemanagers.longhorn.io
 spec:
@@ -3703,7 +3697,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: snapshots.longhorn.io
 spec:
@@ -3836,7 +3830,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: supportbundles.longhorn.io
 spec:
@@ -3971,7 +3965,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: systembackups.longhorn.io
 spec:
@@ -4112,7 +4106,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: systemrestores.longhorn.io
 spec:
@@ -4225,7 +4219,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: volumeattachments.longhorn.io
 spec:
@@ -4373,7 +4367,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     longhorn-manager: ""
   name: volumes.longhorn.io
 spec:
@@ -4397,7 +4391,6 @@ spec:
     shortNames:
     - lhv
     singular: volume
-  preserveUnknownFields: false
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -4788,7 +4781,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 rules:
 - apiGroups:
   - apiextensions.k8s.io
@@ -4854,7 +4847,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -4872,7 +4865,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -4889,7 +4882,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-manager
   name: longhorn-backend
   namespace: longhorn-system
@@ -4909,7 +4902,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-ui
   name: longhorn-frontend
   namespace: longhorn-system
@@ -4930,7 +4923,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-conversion-webhook
   name: longhorn-conversion-webhook
   namespace: longhorn-system
@@ -4950,7 +4943,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-admission-webhook
   name: longhorn-admission-webhook
   namespace: longhorn-system
@@ -4970,7 +4963,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-recovery-backend
   name: longhorn-recovery-backend
   namespace: longhorn-system
@@ -4990,7 +4983,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-manager
   name: longhorn-manager
   namespace: longhorn-system
@@ -5003,12 +4996,12 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.9.0
+        app.kubernetes.io/version: v1.9.1
         app: longhorn-manager
     spec:
       containers:
       - name: longhorn-manager
-        image: longhornio/longhorn-manager:v1.9.0
+        image: longhornio/longhorn-manager:v1.9.1
         imagePullPolicy: IfNotPresent
         securityContext:
           privileged: true
@@ -5017,17 +5010,17 @@ spec:
         - -d
         - daemon
         - --engine-image
-        - "longhornio/longhorn-engine:v1.9.0"
+        - "longhornio/longhorn-engine:v1.9.1"
         - --instance-manager-image
-        - "longhornio/longhorn-instance-manager:v1.9.0"
+        - "longhornio/longhorn-instance-manager:v1.9.1"
         - --share-manager-image
-        - "longhornio/longhorn-share-manager:v1.9.0"
+        - "longhornio/longhorn-share-manager:v1.9.1"
         - --backing-image-manager-image
-        - "longhornio/backing-image-manager:v1.9.0"
+        - "longhornio/backing-image-manager:v1.9.1"
         - --support-bundle-manager-image
-        - "longhornio/support-bundle-kit:v0.0.55"
+        - "longhornio/support-bundle-kit:v0.0.61"
         - --manager-image
-        - "longhornio/longhorn-manager:v1.9.0"
+        - "longhornio/longhorn-manager:v1.9.1"
         - --service-account
         - longhorn-service-account
         - --upgrade-version-check
@@ -5081,7 +5074,7 @@ spec:
               fieldPath: spec.nodeName
       - name: pre-pull-share-manager-image
         imagePullPolicy: IfNotPresent
-        image: longhornio/longhorn-share-manager:v1.9.0
+        image: longhornio/longhorn-share-manager:v1.9.1
         command: ["sh", "-c", "echo share-manager image pulled && sleep infinity"]
       volumes:
       - name: boot
@@ -5118,7 +5111,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
 spec:
   replicas: 1
   selector:
@@ -5129,23 +5122,23 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.9.0
+        app.kubernetes.io/version: v1.9.1
         app: longhorn-driver-deployer
     spec:
       initContainers:
         - name: wait-longhorn-manager
-          image: longhornio/longhorn-manager:v1.9.0
+          image: longhornio/longhorn-manager:v1.9.1
           command: ['sh', '-c', 'while [ $(curl -m 1 -s -o /dev/null -w "%{http_code}" http://longhorn-backend:9500/v1) != "200" ]; do echo waiting; sleep 2; done']
       containers:
         - name: longhorn-driver-deployer
-          image: longhornio/longhorn-manager:v1.9.0
+          image: longhornio/longhorn-manager:v1.9.1
           imagePullPolicy: IfNotPresent
           command:
           - longhorn-manager
           - -d
           - deploy-driver
           - --manager-image
-          - "longhornio/longhorn-manager:v1.9.0"
+          - "longhornio/longhorn-manager:v1.9.1"
           - --manager-url
           - http://longhorn-backend:9500/v1
           env:
@@ -5162,17 +5155,17 @@ spec:
               fieldRef:
                 fieldPath: spec.serviceAccountName
           - name: CSI_ATTACHER_IMAGE
-            value: "longhornio/csi-attacher:v4.8.1"
+            value: "longhornio/csi-attacher:v4.9.0-20250709"
           - name: CSI_PROVISIONER_IMAGE
-            value: "longhornio/csi-provisioner:v5.2.0"
+            value: "longhornio/csi-provisioner:v5.3.0-20250709"
           - name: CSI_NODE_DRIVER_REGISTRAR_IMAGE
-            value: "longhornio/csi-node-driver-registrar:v2.13.0"
+            value: "longhornio/csi-node-driver-registrar:v2.14.0-20250709"
           - name: CSI_RESIZER_IMAGE
-            value: "longhornio/csi-resizer:v1.13.2"
+            value: "longhornio/csi-resizer:v1.14.0-20250709"
           - name: CSI_SNAPSHOTTER_IMAGE
-            value: "longhornio/csi-snapshotter:v8.2.0"
+            value: "longhornio/csi-snapshotter:v8.3.0-20250709"
           - name: CSI_LIVENESS_PROBE_IMAGE
-            value: "longhornio/livenessprobe:v2.15.0"
+            value: "longhornio/livenessprobe:v2.16.0-20250709"
       priorityClassName: "longhorn-critical"
       serviceAccountName: longhorn-service-account
       securityContext:
@@ -5185,7 +5178,7 @@ metadata:
   labels:
     app.kubernetes.io/name: longhorn
     app.kubernetes.io/instance: longhorn
-    app.kubernetes.io/version: v1.9.0
+    app.kubernetes.io/version: v1.9.1
     app: longhorn-ui
   name: longhorn-ui
   namespace: longhorn-system
@@ -5199,7 +5192,7 @@ spec:
       labels:
         app.kubernetes.io/name: longhorn
         app.kubernetes.io/instance: longhorn
-        app.kubernetes.io/version: v1.9.0
+        app.kubernetes.io/version: v1.9.1
         app: longhorn-ui
     spec:
       serviceAccountName: longhorn-ui-service-account
@@ -5217,7 +5210,7 @@ spec:
             weight: 1
       containers:
       - name: longhorn-ui
-        image: longhornio/longhorn-ui:v1.9.0
+        image: longhornio/longhorn-ui:v1.9.1
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: nginx-cache
