--- a/apps/base/cluster-reloader/deploy/manifests/deployment.yaml
+++ b/apps/base/cluster-reloader/deploy/manifests/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: reloader-reloader
     spec:
       containers:
-        - image: "ghcr.io/stakater/reloader:v1.4.5"
+        - image: "ghcr.io/stakater/reloader:v1.4.6"
           imagePullPolicy: IfNotPresent
           name: reloader-reloader
           env:
@@ -31,6 +31,13 @@ spec:
                 resourceFieldRef:
                   resource: limits.memory
                   divisor: '1'
+            - name: RELOADER_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+
+            - name: RELOADER_DEPLOYMENT_NAME
+              value: reloader-reloader
           ports:
             - name: http
               containerPort: 9090
