--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-gitea.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-gitea.yaml
@@ -2,7 +2,7 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: gitea/gitea
-    tag: 1.24.2-rootless
+    tag: 1.24.5-rootless
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-rootless
     excludes:
@@ -10,20 +10,20 @@ watchers:
       - ^1\.[0-9]\.
       - ^1\.1[0-9]\.
       - ^1\.2[0-3]\.
-      - ^1\.24\.[0-1]-
+      - ^1\.24\.[0-4]-
   - name: Gitea PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.13-alpine3.21
+    tag: 15.14-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
-      - .*-alpine3\.2[0]
+      - .*-alpine3\.2[0-1]
       - ^[0-9]\.
       - ^1[0-4]\.
       - ^15\.[0-9]\.
-      - ^15\.1[0-2]\.
+      - ^15\.1[0-3]\.
