--- a/apps/base/download-pyload/deploy/kustomization.yaml
+++ b/apps/base/download-pyload/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: pyload
       app.kubernetes.io/component: pyload
-      app.kubernetes.io/version: 0.5.0b3.dev68-3.11.2-slim-bullseye
+      app.kubernetes.io/version: 0.5.0b3.dev92-3.13.7-slim-trixie
 
 secretGenerator:
 - name: pyload-env
