--- a/apps/base/download-sabnzbd/deploy/kustomization.yaml
+++ b/apps/base/download-sabnzbd/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: sabnzbd
       app.kubernetes.io/component: sabnzbd
-      app.kubernetes.io/version: 4.5.2-3.13.5-slim-bookworm
+      app.kubernetes.io/version: 4.5.2-3.13.7-slim-trixie
 
 secretGenerator:
 - name: sabnzbd-config
