--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-sabnzbd.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-download-sabnzbd.yaml
@@ -3,14 +3,14 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/python
-    tag: 3.13.5-slim-bookworm
+    tag: 3.13.7-slim-trixie
     includes:
-      - ^[0-9]+\.[0-9]+\.[0-9]+-slim-bookworm
+      - ^[0-9]+\.[0-9]+\.[0-9]+-slim-trixie
     excludes:
       - ^2\.
       - ^3\.[0-9]\.
       - ^3\.1[0-2]\.
-      - ^3\.13\.[0-4]-
+      - ^3\.13\.[0-6]-
   - name: SABnzbd
     type: github_release
     repo: sabnzbd/sabnzbd
