--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
@@ -2,7 +2,7 @@ watchers:
   - name: ZoneMTA
     type: github_tag
     repo: zone-eu/zone-mta
-    tag: v3.10.1
+    tag: v3.10.2
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -24,7 +24,7 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mongo
-    tag: 8.0.6-noble
+    tag: 8.0.13-noble
     includes:
       - '[0-9]+\.[0-9]+.[0-9]+-.*'
     excludes:
@@ -32,17 +32,19 @@ watchers:
       - .*-(nanoserver|windowsservercore).*$
       - .*-focal$
       - ^[0-7]\..*
-      - ^8\.0\.[0-5]-.*
+      - ^8\.0\.[0-9]-.*
+      - ^8\.0\.1[0-2]-.*
   - name: "ZoneMTA Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 23.10.0-alpine3.21
+    tag: 23.11.1-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*-alpine3.1[0-9]
-      - .*-alpine3.2[0]
+      - .*-alpine3.2[0-1]
       - 1[0-9]\..*
       - 2[0-2]\..*
       - 23\.[0-9]\..*
+      - 23\.1[0]\..*
