--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-paperless.yaml
@@ -3,14 +3,14 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: paperless-ngx/paperless-ngx
-    tag: 2.17.1
+    tag: 2.18.2
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - .*(beta|rc).*
       - ^[0-1]\..*
       - ^2\.[0-9]\..*
-      - ^2\.1[0-6]\..*
+      - ^2\.1[0-7]\..*
   - name: "Paperless Redis"
     type: docker_registry
     repo: registry-1.docker.io
@@ -26,15 +26,15 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.13-alpine3.21
+    tag: 15.14-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
       # TODO upgrade major version
       - ^15\.
     excludes:
       - .*-alpine3\.1[0-9]
-      - .*-alpine3\.2[0]
+      - .*-alpine3\.2[0-1]
       - ^[0-9]\.
       - ^1[0-4]\.
       - ^15\.[0-9]\.
-      - ^15\.1[0-2]\.
+      - ^15\.1[0-3]\.
