--- a/ansible/install_infra/roles/letsencrypt_generate/vars/main.yml
+++ b/ansible/install_infra/roles/letsencrypt_generate/vars/main.yml
@@ -5,6 +5,8 @@ letsencrypt_hooks_dir: "{{ letsencrypt_dir }}/hooks"
 letsencrypt_hooks_pre_include_dir: "{{ letsencrypt_hooks_dir }}/pre.d"
 letsencrypt_hooks_post_include_dir: "{{ letsencrypt_hooks_dir }}/post.d"
 
+certbot_venv_dir: /opt/certbot_venv
+
 # Roughly the same config as nginx_keepalived_instance
 letsencrypt_keepalived_instance:
   name: letsencrypt
