--- a/apps/vagrant/dev-argo-tasks/deploy/sensors/sensor.yaml
+++ b/apps/vagrant/dev-argo-tasks/deploy/sensors/sensor.yaml
@@ -613,7 +613,7 @@ spec:
             type: string
             value:
               - "apps/(base|vagrant)/infra-docker-registry-ui/.*"
-    - name: infra-gandi-livedns-git-dep
+    - name: infra-ddclient-git-dep
       eventSourceName: webhook
       eventName: git
       filters:
@@ -629,7 +629,7 @@ spec:
           - path: "[body.commits.#.modified.#()#,body.commits.#.added.#()#,body.commits.#.removed.#()#]"
             type: string
             value:
-              - "apps/(base|vagrant)/infra-gandi-livedns/.*"
+              - "apps/(base|vagrant)/infra-ddclient/.*"
     - name: infra-kubernetes-metrics-server-git-dep
       eventSourceName: webhook
       eventName: git
@@ -2087,8 +2087,8 @@ spec:
                 workflowTemplateRef:
                   name: app-build-and-deploy
     - template:
-        name: infra-gandi-livedns-argo-workflow-trigger
-        conditions: infra-gandi-livedns-git-dep
+        name: infra-ddclient-argo-workflow-trigger
+        conditions: infra-ddclient-git-dep
         argoWorkflow:
           operation: submit
           source:
@@ -2097,16 +2097,16 @@ spec:
               kind: Workflow
               metadata:
                 namespace: dev-argo-tasks
-                generateName: infra-gandi-livedns-build-and-deploy-
+                generateName: infra-ddclient-build-and-deploy-
               spec:
                 entrypoint: build-and-deploy-from-git
                 synchronization:
                   mutex:
-                    name: infra-gandi-livedns-build-and-deploy
+                    name: infra-ddclient-build-and-deploy
                 arguments:
                   parameters:
                     - name: app_name
-                      value: infra-gandi-livedns
+                      value: infra-ddclient
                     - name: base_git_repo
                       value: http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
                     - name: base_git_branch
