--- a/apps/base/home-homeassistant/deploy/homeassistant/statefulSet.yaml
+++ b/apps/base/home-homeassistant/deploy/homeassistant/statefulSet.yaml
@@ -43,6 +43,12 @@ spec:
             mkdir -p /homeassistant-config/.cache
             mkdir -p /homeassistant-config/.config
             mkdir -p /homeassistant-config/.local
+
+            mkdir -p /tmp-volume/run-udev
+            mkdir -p /tmp-volume/tmp
+            mkdir -p /tmp-volume/site-packages
+            cp -a /usr/local/lib/python3.13/site-packages/* /tmp-volume/site-packages/
+            chown -R homeassistant:homeassistant /tmp-volume/site-packages
         securityContext:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
@@ -56,6 +62,8 @@ spec:
           mountPath: /homeassistant-config-bootstrap
         - name: homeassistant-secret-bootstrap
           mountPath: /homeassistant-secret-bootstrap
+        - name: tmp-volume
+          mountPath: /tmp-volume
       containers:
       - name: homeassistant
         image: "registry.lan/homeassistant:2025.8.3-custom"
@@ -86,8 +94,16 @@ spec:
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.cert
           subPath: ca.crt
-        - name: run-volume
+        - name: tmp-volume
           mountPath: /run/udev
+          subPath: run-udev
+        # Required to install custom components' requirements
+        - name: tmp-volume
+          mountPath: /usr/local/lib/python3.13/site-packages
+          subPath: site-packages
+        - name: tmp-volume
+          mountPath: /tmp
+          subPath: tmp
         securityContext:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
@@ -130,7 +146,7 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
-      - name: run-volume
+      - name: tmp-volume
         emptyDir: {}
       imagePullSecrets:
       - name: docker-config
