feat(frigate): Update exposed ports

--- a/apps/base/home-frigate/deploy/service.yaml
+++ b/apps/base/home-frigate/deploy/service.yaml
@@ -6,8 +6,10 @@ spec:
   ports:
   - port: 5000
     name: http
-  - port: 1935
-    name: rtmp
+  - port: 8554
+    name: rtsp
+  - port: 8555
+    name: webrtc
   selector:
     app.kubernetes.io/name: frigate
     app.kubernetes.io/component: frigate
