--- a/ansible/install_infra/roles/backup_restic/tasks/host.yml
+++ b/ansible/install_infra/roles/backup_restic/tasks/host.yml
@@ -23,7 +23,7 @@
   notify: Reload systemd daemon
   when:
     - schedule_with_systemd
-    - restic_backup_host_enabled and restic_backup_hosts_timer
+    - restic_backup_host_enabled and restic_backup_hosts_timer is defined
 
 - name: Enable Host backup systemd timer
   ansible.builtin.systemd:
@@ -32,7 +32,7 @@
     enabled: yes
   when:
     - schedule_with_systemd
-    - restic_backup_host_enabled and restic_backup_hosts_timer
+    - restic_backup_host_enabled and restic_backup_hosts_timer is defined
 
 - name: Ensure Host backup systemd unit and timer are not deployed
   ansible.builtin.file:
