--- a/ansible/install_infra/roles/kubernetes_node_postinstall/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_postinstall/tasks/main.yml
@@ -43,13 +43,13 @@
 - name: Tag node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} label nodes {{ ansible_hostname | lower }} --overwrite=true {{ item.name }}={{ item.value | quote }}
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ kubernetes_node_labels | default([]) }}"
+  loop: "{{ kubernetes_node_labels | default([]) }}"
   when: (item.name not in current_node_tags) or (item.value != current_node_tags[item.name])
 
 - name: Untag node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} label nodes {{ ansible_hostname | lower }} {{ item }}-
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ current_node_tags }}"
+  loop: "{{ current_node_tags.keys() }}"
   when:
     - "'kubernetes.io' not in item"
     - item not in (kubernetes_node_labels | default([]) | map(attribute='name'))
@@ -57,13 +57,13 @@
 - name: Annotate node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} annotate nodes {{ ansible_hostname | lower }} --overwrite=true {{ item.name }}={{ item.value | quote }}
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ kubernetes_node_annotations | default([]) }}"
+  loop: "{{ kubernetes_node_annotations | default([]) }}"
   when: (item.name not in current_node_annotations) or (item.value != current_node_annotations[item.name])
 
 - name: Unannotate node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} annotate nodes {{ ansible_hostname | lower }} {{ item }}-
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ current_node_annotations }}"
+  loop: "{{ current_node_annotations.keys() }}"
   when:
     - "'kubernetes.io' not in item"
     - "'projectcalico.org' not in item"
@@ -72,7 +72,7 @@
 - name: Look for taints to add (with value)
   ansible.builtin.set_fact:
     node_taints_to_add: "{{ node_taints_to_add | default([]) + [ item ] }}"
-  with_items: "{{ kubernetes_node_taints | default([]) }}"
+  loop: "{{ kubernetes_node_taints | default([]) }}"
   when:
     - item.state == 'present'
     - item.value is defined
@@ -81,7 +81,7 @@
 - name: Look for taints to add (without value)
   ansible.builtin.set_fact:
     node_taints_to_add: "{{ node_taints_to_add | default([]) + [ item ] }}"
-  with_items: "{{ kubernetes_node_taints | default([]) }}"
+  loop: "{{ kubernetes_node_taints | default([]) }}"
   when:
     - item.state == 'present'
     - item.value is not defined
@@ -90,7 +90,7 @@
 - name: Look for taints to remove (with value)
   ansible.builtin.set_fact:
     node_taints_to_remove: "{{ node_taints_to_remove | default([]) + [ item ] }}"
-  with_items: "{{ kubernetes_node_taints | default([]) }}"
+  loop: "{{ kubernetes_node_taints | default([]) }}"
   when:
     - item.state == 'absent'
     - item.value is defined
@@ -99,7 +99,7 @@
 - name: Look for taints to remove (without value)
   ansible.builtin.set_fact:
     node_taints_to_remove: "{{ node_taints_to_remove | default([]) + [ item ] }}"
-  with_items: "{{ kubernetes_node_taints | default([]) }}"
+  loop: "{{ kubernetes_node_taints | default([]) }}"
   when:
     - item.state == 'absent'
     - item.value is not defined
@@ -108,13 +108,13 @@
 - name: Taint node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} taint nodes {{ ansible_hostname | lower }} {{ item.key }}={{ item.value }}:{{ item.effect }}
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ node_taints_to_add | default([]) }}"
+  loop: "{{ node_taints_to_add | default([]) }}"
   # Without an explicit changed_when, the linter complains with: [301] Commands should not change things if nothing needs doing
   changed_when: True
 
 - name: Untaint node
   ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} taint nodes {{ ansible_hostname | lower }} {{ item.key }}:{{ item.effect }}-
   delegate_to: "{{ groups.controller | first }}"
-  with_items: "{{ node_taints_to_remove | default([]) }}"
+  loop: "{{ node_taints_to_remove | default([]) }}"
   # Without an explicit changed_when, the linter complains with: [301] Commands should not change things if nothing needs doing
   changed_when: True
