--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-cd.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-dev-argo-cd.yaml
@@ -13,7 +13,7 @@ watchers:
     type: docker_registry
     repo: quay.io
     image: argoproj/argocd
-    tag: v3.1.0
+    tag: v3.2.0
     includes:
       - v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -36,10 +36,11 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.4.5-alpine3.21
+    tag: 8.2.2-alpine3.22
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
       - .*alpine3\.1[0-9]
-      - ^[0-6]\.
-      - ^7\.[0-3]\.
+      - .*alpine3\.2[0-1]
+      - ^[0-7]\.
+      - ^8\.[0-1]\.
