--- a/apps/base/monitoring-prometheus-operator/deploy/prometheus/clusterRole-allNamespaces.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/prometheus/clusterRole-allNamespaces.yaml
@@ -4,10 +4,17 @@ metadata:
   name: prometheus-k8s-all-namespaces
 rules:
 - apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - ""
   resources:
   - services
-  - endpoints
   - pods
   verbs:
   - get
