--- a/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
@@ -25,11 +25,15 @@ rules:
   - thanosrulers/finalizers
   - thanosrulers/status
   - scrapeconfigs
+  - scrapeconfigs/status
   - servicemonitors
   - servicemonitors/status
   - podmonitors
+  - podmonitors/status
   - probes
+  - probes/status
   - prometheusrules
+  - prometheusrules/status
   verbs:
   - '*'
 - apiGroups:
@@ -78,7 +82,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - ""
+  - events.k8s.io
   resources:
   - events
   verbs:
@@ -105,6 +109,16 @@ rules:
   verbs:
   - get
   - create
+  - update
+  - delete
+- apiGroups:
+  - discovery.k8s.io
+  resources:
+  - endpointslices
+  verbs:
+  - get
+  - create
+  - list
   - update
   - delete
 - apiGroups:
